B-F Backup Sandbox 30.4.12/src/objects/Account_Wholesaler__c.object
<CustomObject>
    <description>Wholesales Junction Object</description>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ECC Account Number</inlineHelpText>
        <label>Account Number (SAP)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Wholesalers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Allow_Order__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banner_Partner__c</fullName>
        <label>Banner Partner</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Day_1__c</fullName>
        <label>Delivery Day 1</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery_Day_2__c</fullName>
        <label>Delivery Day 2</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked is active</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMAA_Number__c</fullName>
        <label>LMAA Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Code__c</fullName>
        <label>Legacy Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Function__c</fullName>
        <label>Partner Function</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Identification_Type__c</fullName>
        <label>Partner Identification Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <label>Suburb</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trading_Name__c</fullName>
        <label>Trading Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Account_Name__c</fullName>
        <description>Wholesales Account Name</description>
        <inlineHelpText>This is the Wholesalers (Account Name) for this retailer - Used for the (Cross-Reference) Conversion</inlineHelpText>
        <label>Wholesaler Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Account_Number__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is the Wholesalers (Account Number) for this retailer - Used for the (Cross-Reference) Conversion</inlineHelpText>
        <label>Wholesaler Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Name__c</fullName>
        <formula>Wholesaler__r.Wholesaler_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wholesaler Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler</label>
        <referenceTo>Wholesaler__c</referenceTo>
        <relationshipName>Wholesaler</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Wholesaler</label>
    <nameField>
        <displayFormat>WHSL-{0}</displayFormat>
        <label>Account Wholesaler</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I30000002EvgaEAC_00NQ0000000zio7MAA</fullName>
        <active>true</active>
        <field>Wholesaler_Product__c.Account_Wholesaler__c</field>
        <filterItems>
            <field>Account_Wholesaler__c.Wholesaler__c</field>
            <operation>equals</operation>
            <valueField>$Source.Wholesaler__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Wholesaler Product_Account Wholesaler</name>
        <sourceObject>Wholesaler_Product__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I30000002EvgtEAC_00NQ0000001058TMAQ</fullName>
        <active>true</active>
        <field>Group_Promotions__c.Account_Wholesaler__c</field>
        <filterItems>
            <field>Account_Wholesaler__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Deal_Account Wholesaler</name>
        <sourceObject>Group_Promotions__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IV00000004PhxMAE_00NV0000000KoXHMA0</fullName>
        <active>true</active>
        <field>Order__c.Wholesalers__c</field>
        <filterItems>
            <field>Account_Wholesaler__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <infoMessage>Try string search Wh*</infoMessage>
        <isOptional>false</isOptional>
        <name>Order_Wholesaler - Look Up</name>
        <sourceObject>Order__c</sourceObject>
    </namedFilters>
    <pluralLabel>Account Wholesalers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>